# OVpnManager

./: Cargo.toml  database.db  hetzner-finland.pub
migrations/2024-02-24-230129_create_initial_tables/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs  ssh_client.rs
templates/: base.html  hosts.html  servers.html  users.html
