[package]
name = "OVpnManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-utils = "3.0.1"
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
env_logger = "0.11.1"
log = "0.4.20"
minijinja = { version = "1.0.12", features = ["loader"] }
minijinja-autoreload = "1.0.12"
