[package]
name = "OVpnManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-utils = "3.0.1"
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
diesel = { version = "2.1.4", features = ["sqlite"] }
env_logger = "0.11.1"
log = "0.4.20"
minijinja = { version = "1.0.12", features = ["loader"] }
minijinja-autoreload = "1.0.12"
russh = "0.42.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
